Fix horizontal scroll on mobile

--- a/assets/base.css
+++ b/assets/base.css
@@ -3611,3 +3611,8 @@ details-disclosure > details {
     transform: translateX(100%) scaleX(0);
   }
 }
+
+/* Mobile Horizontal Scroll Fix */
+html, body {
+  overflow-x: hidden;
+}
